# advent-of-code-rs

./: .gitignore  Cargo.toml
src/: main.rs
src/day1/: part1.rs  part2.rs
