[package]
name = "advent-of-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
ahash = "0.8.6"
aho-corasick = "1.1.2"
anyhow = "1.0.75"
base64 = "0.21.5"
bitflags = { version = "2.4.1", features = ["bytemuck", "serde"] }
bytemuck = "1.14.0"
eyre = "0.6.9"
fastrand = "2.0.1"
futures = "0.3.29"
fxhash = "0.2.1"
hashbrown = { version = "0.14.3", features = ["serde"] }
indexmap = { version = "2.1.0", features = ["rayon", "serde"] }
itertools = { version = "0.12.0" }
itoa = "1.0.9"
md5 = "0.7.0"
memchr = "2.6.4"
nom = "7.1.3"
num-integer = "0.1.45"
num-traits = "0.2.17"
parking_lot = { version = "0.12.1", features = ["serde"] }
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.2"
ryu = "1.0.15"
serde = { version = "1.0.193", features = ["derive"] }
time = { version = "0.3.30", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.34.0", features = ["macros", "sync", "time"] }
